# balancedbanana

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog.txt  README.md  balancedbanana.sql  bb.cpp  bb.h  bbcsrc.cpp  bbcsrc.h  bbdsrc.h  bbssrc.cpp  bbssrc.h  src.cpp  src.h
.circleci/: config.yml
ConfigFiles/: CMakeLists.txt  JobConfig.h  Priority.h  SchedulerConfig.h
ConfigFiles/include/: JobConfig.h  Priority.h  SchedulerConfig.h
ConfigFiles/src/: JobConfig.cpp  SchedulerConfig.cpp
Database/: Factory.cpp  Gateway.cpp  Gateway.h  Repository.h  job_details.h
Scheduler/: IUser.h  Job.h  PriorityQueue.h  Scheduler.h  User.h  Worker.cpp
Scheduler/Database/: Factory.h  Gateway.cpp  JobDetails.h  JobResult.h  JobStatus.h  user_details.h  worker_details.h
Scheduler/queue/: PriorityQueue.h  Queue.h
TimedEvents/: Event.h  EventDispatcher.h  Timer.h
TimedEvents/include/: Timer.h
TimedEvents/src/: Timer.cpp
client/: Client.cpp
commandLineInterface/: CommandLineProcessor.h
communication/: CMakeLists.txt  Communicator.h  SSLSocket.h
communication/authenticator/: AuthHandler.h  Authenticator.h  CMakeLists.txt  main.cpp
communication/authenticator/src/: AuthHandler.cpp  AuthHandler.h  Authenticator.cpp  Authenticator.h  LDAPAuthenticator.h  SSHAuthHandler.h
communication/include/: Communicator.h  SSLSocket.h
communication/message/: AuthResultMessage.h  ClientAuthMessage.h  HardwareDetailMessage.h  Message.h  PublicKeyAuthMessage.h  SnapshotMessage.h  TaskMessage.h  WorkerAuthMessage.h
communication/messageProcessor/: ClientMP.h  MessageProcessor.h  SchedulerClientMP.h  SchedulerWorkerMP.h
communication/src/: Communicator.cpp  SSLSocket.cpp
communication/testsrc/: main.cpp
contrib/GTest/: CMakeLists.txt.in
contrib/Webserver/: CMakeLists.txt.in
include/client/: Client.h  ClientMP.h  ClientMain.h  config.txt
include/commandLineInterface/: ClientCommandLineProcessor.h  CommandLineProcessor.h  SchedulerCommandLineProcessor.h  Task.h  WorkerCommandLineProcessor.h
include/communication/: Communicator.h  CommunicatorListener.h  MessageProcessor.h  SSLSocket.h  Task.h
include/configfiles/: ApplicationConfig.h  JobConfig.h  Priority.h  SchedulerConfig.h
include/data/: Specs.h  User.h  Worker.h
include/database/: Factory.h  Gateway.h  IGateway.h  JobGateway.h  JobStatus.h  Repository.h  Specs.h  Subject.h  UserGateway.h  Utilities.h  WorkerGateway.h  database_utilities.h  details.h  job_details.h  job_result.h  user_details.h  worker_details.h
include/scheduler/: Clients.h  IUser.h  Job.h  Observer.h  Scheduler.h  SchedulerClientMP.h  SchedulerWorkerMP.h  User.h  Worker.h  WorkerObserver.h  config.txt
include/timedevents/: EventHandler.h  Timer.h
include/worker/: Worker.h  WorkerMP.h
share/.bbc/: appconfig.ini
share/.bbs/: appconfig.ini
src/: bb.cpp  bbcsrc.cpp  bbdsrc.cpp  bbssrc.cpp  src.cpp
src/client/: CMakeLists.txt  Client.cpp  ClientMP.cpp  ClientMain.cpp  client
src/commandLineInterface/: CMakeLists.txt  ClientCommandLineProcessor.cpp  Task.cpp  (+3 more)
src/communication/: CMakeLists.txt  Communicator.cpp  CommunicatorListener.cpp  MessageProcessor.cpp  SSLSocket.cpp  SchedulerClientMP.cpp  SchedulerWorkerMP.cpp  Task.cpp
src/communication/authenticator/: AuthHandler.cpp  Authenticator.cpp  CMakeLists.txt  SSHAuthHandler.cpp
src/communication/message/: AuthResultMessage.cpp  CMakeLists.txt  ClientAuthMessage.cpp  HardwareDetailMessage.cpp  Message.cpp  PublicKeyAuthMessage.cpp  RespondToClientMessage.cpp  Serialization.cpp  SnapshotMessage.cpp  TaskMessage.cpp  TaskResponseMessage.cpp  WorkerAuthMessage.cpp  WorkerLoadRequestMessage.cpp  WorkerLoadResponseMessage.cpp
src/database/: CMakeLists.txt  Factory.cpp  Gateway.cpp  IGateway.cpp  JobGateway.cpp  JobStatus.cpp  Repository.cpp  UserGateway.cpp  Utilities.cpp  WorkerGateway.cpp
src/scheduler/: CMakeLists.txt  Clients.cpp  IUser.cpp  Job.cpp  Scheduler.cpp  SchedulerClientMP.cpp  SchedulerWorkerMP.cpp  User.cpp  Worker.cpp
src/scheduler/clientRequests/: AddImageRequest.cpp  BackupRequest.cpp  CMakeLists.txt  ClientRequest.cpp  ContinueRequest.cpp  PauseRequest.cpp  RemoveImageRequest.cpp  RestoreRequest.cpp  RunRequest.cpp  StatusRequest.cpp  StopRequest.cpp  TailRequest.cpp
src/scheduler/httpserver/: HttpServer.cpp
src/scheduler/queue/: CMakeLists.txt  PriorityQueue.cpp  Queue.cpp
src/scheduler/smtpserver/: SmtpServer.cpp
src/scheduler/webserver/: Webserver.cpp
src/worker/: CMakeLists.txt  Checkpoint.cpp  Container.cpp  Docker.cpp  Snapshot.cpp  Worker.cpp  WorkerMP.cpp  bbd.cpp
testsrc/commandLineInterface/: CMakeLists.txt  ClientCommandLineProcessorTest.cpp  SchedulerCommandLineProcessorTest.cpp  WorkerCommandLineProcessorTest.cpp
testsrc/communication/: CMakeLists.txt  ConnectTest.cpp
testsrc/communication/authenticator/: AuthTest.cpp  CMakeLists.txt
testsrc/communication/message/: AuthResultMessageTests.cpp  ClientAuthMessageTests.cpp  HardwareDetailMessageTests.cpp  MessageTests.cpp  MessagesProcessTests.cpp  PublicKeyAuthMessageTests.cpp  RespondToClientMessageTests.cpp  SnapshotMessageTests.cpp  TaskMessageTests.cpp  TaskResponseMessageTests.cpp  WorkerAuthMessageTests.cpp  WorkerLoadResponseMessageTests.cpp
testsrc/configfiles/: ApplicationConfigTests.cpp  CMakeLists.txt  JobConfigTests.cpp  PriorityTests.cpp
testsrc/database/: CMakeLists.txt  DatabaseTest.h  FactoryTests.cpp  GatewayTest.cpp  JobGatewayTest.cpp  JobGatewayTests.cpp  JobStatusTests.cpp  RepositoryTests.cpp  UserGatewayTest.cpp  UserGatewayTests.cpp  UtilitiesTests.cpp  WorkerGatewayTest.cpp  WorkerGatewayTests.cpp
testsrc/scheduler/clientRequests/: CMakeLists.txt  RequestTestUtil.cpp  RequestTestUtil.h  TestBackupRequest.cpp  TestClientRequest.cpp  TestClientRequestsUtils.cpp  TestClientRequestsUtils.h  TestContinueRequest.cpp  TestPauseRequest.cpp  TestRestoreRequest.cpp  TestRunRequest.cpp  TestStatusRequest.cpp  TestStopRequest.cpp  TestTailRequest.cpp
testsrc/scheduler/httpserver/: CMakeLists.txt  HttpTests.cpp  testapiv1.py
worker/: Worker.h
(+76 files in other folders)
