add_library(worker Worker.cpp Container.cpp Docker.cpp Checkpoint.cpp)
target_link_libraries(worker Qt5::Core Qt5::Network configfiles commandLineInterface)
add_executable(bbd bbd.cpp)
target_link_libraries(bbd worker)
set_target_properties(bbd PROPERTIES INSTALL_RPATH "\$ORIGIN/../lib")
install (TARGETS bbd Net RUNTIME DESTINATION bin LIBRARY DESTINATION lib)