include(GoogleTest)

add_executable(commandLineInterfaceTests ClientCommandLineProcessorTest.cpp SchedulerCommandLineProcessorTest.cpp WorkerCommandLineProcessorTest.cpp)
target_link_libraries(commandLineInterfaceTests ${GTEST} commandLineInterface configfiles)
gtest_discover_tests(commandLineInterfaceTests)