include(GoogleTest)

add_library(clientResponseTests TestClientRequest.cpp TestBackupRequest.cpp TestContinueRequest.cpp TestPauseRequest.cpp TestRestoreRequest.cpp TestRunRequest.cpp TestStatusRequest.cpp TestStopRequest.cpp TestTailRequest.cpp)
target_link_libraries(clientResponseTests ${GTEST} clientRequests scheduler configfiles database)
gtest_discover_tests(clientResponseTests)